--- a/android/app/src/main/res/layout/flutter_view_layout.xml
+++ b/android/app/src/main/res/layout/flutter_view_layout.xml
@@ -37,6 +37,15 @@
         />
 
       <TextView
+              android:id="@+id/event_count"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:gravity="center"
+              android:textSize="@dimen/font_size"
+      />
+
+      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/android"
